# lilla-bocker

./: Cargo.toml  LICENSE  README.md
backend/dev_server/: Cargo.toml
backend/dev_server/src/: main.rs
backend/trivial_file_server/: Cargo.toml
backend/trivial_file_server/src/: args.rs  main.rs
client/godot/4.0.3/: hello-world.tscn  icon.svg.import  project.godot
client/godot/4.1-beta2/rnd-flipbook/: hello-world.tscn  project.godot
client/godot/4.1-beta2/rnd-flipbook/autoloads/: constants.gd
client/godot/4.1-beta2/rnd-flipbook/scenes/: scn_flipbook_v1.tscn
client/godot/4.1-beta2/rnd-flipbook/src/: file_position_in_package.gd  flipbook_metadata_v1.gd
client/godot/4.1-beta3/rnd-flipbook/: export_presets.cfg  project.godot
client/godot/4.1-beta3/rnd-flipbook/autoloads/: constants.gd
client/godot/4.1-rc2/rnd-flipbook/: export_presets.cfg
client/godot/4.1-rc2/rnd-flipbook/scenes/flipbook/: scn_flipbook_v1.tscn
client/godot/4.1-rc2/rnd-flipbook/src/flipbook/v1/: flipbook.gd
client/godot/4.1/rnd-flipbook/: .gitignore  default_bus_layout.tres  dev_theme.tres  icon.svg.import  project.godot
client/godot/4.1/rnd-flipbook/fonts/Permanent_Marker/: PermanentMarker-Regular.ttf.import
client/godot/4.1/rnd-flipbook/images/: temp_loading_splash.png.import
client/godot/4.1/rnd-flipbook/rnd_scenes/: scn_miniature.gd  scn_miniature.tscn
client/godot/4.1/rnd-flipbook/scenes/: scn_main.gd  scn_main.tscn
client/godot/4.1/rnd-flipbook/scenes/flipbook/: scn_flipbook_v1.gd
client/godot/4.1/rnd-flipbook/src/: flipbook_metadata_v1.gd
client/godot/4.1/rnd-flipbook/test_scenes/: test_flipbook_refactor.gd  test_flipbook_refactor.tscn
lib/flipbook/: Cargo.toml
lib/flipbook/src/: compile.rs  flipbook.rs  lib.rs  main.rs
lib/flipbook/src/compile/: build.rs  common.rs  persistence.rs
lib/flipbook/src/flipbook/: common.rs  package.rs  source.rs
lib/flipbook/test_source/: sample_source.json
tools/mock-flipbook/: Cargo.toml
tools/mock-flipbook/src/: args.rs  fs.rs  generator_constants.rs  image.rs  lib.rs  main.rs  miniature.rs  mock_sources.rs  speech.rs  text.rs
tools/mock-flipbook/src/args/: image_size.rs  page_range.rs
tools/mock-flipbook/src/image/: background.rs  model.rs  text.rs
tools/mock-flipbook/src/speech/: swedish.rs
tools/mock-flipbook/src/text/: english.rs  spanish.rs
tools/mock-flipbook/tests/: test_mock_resources.rs
