[package]
name = "dev_server"
version = "0.1.0"
edition = "2021"
description = "Initial version "

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.15", features = ["json"] }

clap = { version = "4.2.7", features = [ "derive"] }

flipbook = { path = "../../lib/flipbook" }

serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"

tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16" }
