[package]
name = "mock-flipbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"

clap = { version = "4.2.7", features = [ "derive"] }

fake = "2.6.1"
flipbook = { path = "../../lib/flipbook" }

nannou = "0.18.1"

serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16" }
